--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
     "stripe": "^13.4.0",
     "superjson": "^1.13.1",
     "zod": "^3.21.4"
