--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.3",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.1.1",
     "@stripe/react-stripe-js": "^2.1.2",
     "@stripe/stripe-js": "^2.1.2",
