--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@trpc/next": "^10.34.0",
     "@trpc/react-query": "^10.34.0",
     "@trpc/server": "^10.34.0",
+    "aws-sdk": "^2.1454.0",
     "next": "^13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
