--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@algolia/autocomplete-js": "^1.11.0",
+    "@algolia/autocomplete-theme-classic": "^1.11.0",
     "@clerk/nextjs": "^4.23.3",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.1.1",
@@ -21,6 +23,7 @@
     "@trpc/next": "^10.34.0",
     "@trpc/react-query": "^10.34.0",
     "@trpc/server": "^10.34.0",
+    "algoliasearch": "^4.19.1",
     "aws-sdk": "^2.1454.0",
     "next": "^13.4.13",
     "react": "18.2.0",
