--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-instantsearch": "^7.0.3",
     "stripe": "^13.4.0",
     "superjson": "^1.13.1",
     "zod": "^3.21.4"
