--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-instantsearch": "^7.0.3",
     "stripe": "^13.4.0",
     "superjson": "^1.13.1",
+    "uuid": "^9.0.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
